k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kokot-web
spec:
  selector:
    app: kokot-web
  ports:
    - name: http
      port: 80
      targetPort: 8000
  type: ClusterIP
